@@ -1,4 +1,5 @@
 v2.6
+si pegabas una url como: https://www.youtube.com/live/3wzD80Irf40?feature=share el programa no agarraba los chats. ya debería hacerlo.
 ya se deberían capturar los mensajes que tengan el valor None.
 se agrega un convertidor de divisas para convertir las donaciones a la moneda  que desees.
 se corrige un bug donde se agregaba el título al momento de agregar el enlace a tus favoritos del en vivo actual en twitch si el creador estaba strimeando. se debía agregar el nombre del canal en lugar del título del envivo.
